[package]
name = "rat-text"
version = "1.2.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui text input widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
if_same_then_else = "allow"
comparison_chain = "allow"

[features]
cr_lines = ["ropey/cr_lines"]
unicode_lines = ["ropey/unicode_lines"]

[dependencies]
ratatui = { version = "0.29" }
crossterm = "0.28"
ropey = "1.6.1"
iset = "0.3"
pure-rust-locales = "0.8"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
format_num_pattern = "0.9"
log = "0.4"
dyn-clone = "1.0.17"
rustc-hash = "2.1"

rat-event = { version = "1.2", path = "../rat-event" }
rat-reloc = { version = "1.2", path = "../rat-reloc" }
rat-cursor = { version = "1.2", path = "../rat-cursor" }
rat-focus = { version = "1.2", path = "../rat-focus" }
rat-scrolled = { version = "1.1", path = "../rat-scrolled" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
lorem-rustum = "0.0.5"
lipsum = "0.9.1"
cli-clipboard = "0.4"







