[package]
name = "rat-text"
version = "3.0.3"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui text input widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
default = []
cr_lines = ["ropey/cr_lines"]
unicode_lines = ["ropey/unicode_lines"]
# setup cli-clipboard.
cli-clipboard = ["dep:cli-clipboard"]

[dependencies]
log = "0.4"
ropey = "1.6.1"
iset = "0.3"
pure-rust-locales = "0.8"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
format_num_pattern = "0.9"
dyn-clone = "1.0.17"
rustc-hash = "2.1"
regex-cursor = "0.1.5"
cli-clipboard = { version = "0.4", optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-reloc = { version = "2.0", path = "../rat-reloc" }
rat-cursor = { version = "2.0", path = "../rat-cursor" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-scrolled = { version = "2.0", path = "../rat-scrolled" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
lorem-rustum = "0.0.5"
lipsum = "0.9.1"

rat-theme4 = { version = "4", default-features = false, features = [], path = "../rat-theme4" }







