[package]
name = "rat-theme"
version = "0.27.3"
edition = "2021"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui = { version = "0.29" }
crossterm = "0.28"
log = "0.4"
map_range_int = "1.1.0"

rat-widget = { version = "0.33", path = "../rat-widget" }