[package]
name = "rat-theme"
version = "0.27.11"
edition = "2021"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui-core = { version = "0.1.0-alpha.2", path="../../ratatui/ratatui-core" }
ratatui-widgets = { version = "0.3.0-alpha.1", path = "../../ratatui/ratatui-widgets", features = ["unstable-rendered-line-info"] }
log = "0.4"
map_range_int = "1.1.0"

rat-widget = { version = "1.0", path = "../rat-widget" }