[package]
name = "rat-theme2"
version = "1.5.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[dependencies]
ratatui = { version = "0.29" }
log = "0.4"

rat-widget = { version = "2.5", path = "../rat-widget" }