[package]
name = "rat-theme2"
version = "1.6.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }

rat-widget = { version = "3.0", path = "../rat-widget" }