[package]
name = "rat-theme3"
version = "2.5.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[features]
default = []
serde = ["dep:serde", "ratatui/serde"]

[dependencies]
ratatui = { version = "0.29" }
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

rat-widget = { version = "2.6", path = "../rat-widget" }

[dev-dependencies]
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"

[[test]]
name = "serde"
path = "tests/test_serde.rs"
required-features = ["serde"]
