[package]
name = "rat-theme3"
version = "2.6.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "ratatui-core/serde", "ratatui-widgets/serde"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }

rat-widget = { version = "3.0", path = "../rat-widget" }

[dev-dependencies]
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"

[[test]]
name = "serde"
path = "tests/test_serde.rs"
required-features = ["serde"]
