[package]
name = "rat-theme4"
version = "4.1.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
default = ["rat-widget", "color-input", "serde"]
rat-widget = ["dep:rat-widget"]
color-input = ["dep:rat-widget-extra", "rat-widget-extra/color-input"]
serde = ["dep:serde", "ratatui/serde"]

[dependencies]
ratatui = { version = "0.29" }
log = "0.4"
serde = { version = "1", optional = true }
rat-widget = { version = "2.6", path = "../rat-widget", optional = true }
rat-widget-extra = { version = "1.0", path = "../rat-widget-extra", optional = true }

[dev-dependencies]
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"

[[test]]
name = "test_serde"
required-features = ["serde"]
