[package]
name = "rat-theme4"
version = "4.5.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "dark theme and color-schemes"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["ratatui", "widget", "theme"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[features]
# Defaults to 'rat-widget'
default = ["rat-widget"]
# Include styles for rat-widget's
rat-widget = ["dep:rat-widget"]
# Include styles for color-input.
color-input = ["dep:rat-widget-extra", "dep:rat-widget", "rat-widget-extra/color-input"]
# Serde
serde = ["dep:serde", "ratatui-core/serde", "ratatui-widgets/serde"]

[dependencies]
log = "0.4"
serde = { version = "1", optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }

rat-widget = { version = "3.0", path = "../rat-widget", optional = true }
rat-widget-extra = { version = "2.0", path = "../rat-widget-extra", optional = true }

[dev-dependencies]
serde_json = { version = "1.0", features = ["std"] }
anyhow = "1.0"

[[test]]
name = "test_serde"
required-features = ["serde"]
