[package]
name = "rat-vim"
version = "0.2.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui text input widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"
ropey = "1.6.1"
unicode-segmentation = "1.11"
futures = "0.3"
regex-cursor = "0.1.5"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-reloc = { version = "2.0", path = "../rat-reloc" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-scrolled = { version = "2.0", path = "../rat-scrolled" }
rat-text = { version = "3.0", path = "../rat-text" }
rat-widget = { version = "3.0", path = "../rat-widget" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
lorem-rustum = "0.0.5"
lipsum = "0.9.1"
cli-clipboard = "0.4"
rat-theme4 = { version = "4", default-features = false, features = ["rat-widget"], path = "../rat-theme4" }

