[package]
name = "rat-vim"
version = "0.2.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui text input widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore"]

[lints]
workspace = true

[dependencies]
log = "0.4"
ropey = "1.6.1"
unicode-segmentation = "1.11"
futures = "0.3"
regex-cursor = "0.1.5"

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }
rat-focus = { workspace = true }
rat-scrolled = { workspace = true }
rat-text = { workspace = true }
rat-widget = { workspace = true }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
lorem-rustum = "0.0.5"
lipsum = "0.9.1"
cli-clipboard = "0.4"
rat-theme4 = { workspace = true, default-features = false, features = ["rat-widget"] }
