[package]
name = "rat-widget-extra"
version = "1.0.2"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
iban = []
color-input = ["palette"]

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
unicode-segmentation = "1.11"
log = "0.4"

palette = { version = "0.7", optional = true }

rat-event = { version = "1.4", path = "../rat-event" }
rat-reloc = { version = "1.4", path = "../rat-reloc" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-text = { version = "2.8", path = "../rat-text" }


[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
cli-clipboard = "0.4.0"

rat-theme4 = { version = "4", default-features = false, features = ["color-input"], path = "../rat-theme4" }
