[package]
name = "rat-widget-extra"
version = "2.0.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = []
iban = []
color-input = ["palette"]

[dependencies]
unicode-segmentation = "1.11"
log = "0.4"
palette = { version = "0.7", optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }
rat-focus = { workspace = true }
rat-text = { workspace = true }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
cli-clipboard = "0.4.0"

rat-theme4 = { workspace = true, features = ["color-input"] }

[[example]]
name = "colorinput1"
path = "examples/colorinput1.rs"
required-features = ["color-input"]