[package]
name = "rat-widget"
version = "2.8.0"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[lints]
workspace = true

[features]
default = []
user_directories = ["dep:dirs", "dep:sysinfo"]

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["unstable-locales"] }
map_range_int = { version = "1.0" }

dirs = { version = "6.0.0", optional = true }
sysinfo = { version = "0.33", optional = true }

rat-event = { version = "1.4", path = "../rat-event" }
rat-reloc = { version = "1.2", path = "../rat-reloc" }
rat-focus = { version = "1.6", path = "../rat-focus" }
rat-ftable = { version = "1.4", path = "../rat-ftable" }
rat-text = { version = "2.7", path = "../rat-text" }
rat-menu = { version = "2.4", path = "../rat-menu" }
rat-scrolled = { version = "1.4", path = "../rat-scrolled" }
rat-popup = { version = "2.2", path = "../rat-popup" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
format_num_pattern = "0.9"
pure-rust-locales = "0.8"
sys-locale = "0.3.2"
cli-clipboard = "0.4"
rat-theme4 = { version = "4.1", default-features = false, features = ["rat-widget"], path = "../rat-theme4" }
