[package]
name = "rat-widget"
version = "3.0.2"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[lints]
workspace = true

[features]
default = []
# set user-directories for file-dialog
user_directories = ["dep:dirs", "dep:sysinfo"]
# setup cli-clipboard.
cli-clipboard = ["rat-text/cli-clipboard"]

[dependencies]
log = "0.4"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
map_range_int = { version = "1.0" }
dirs = { version = "6.0.0", optional = true }
sysinfo = { version = "0.37", optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { version = "2.0", path = "../rat-event" }
rat-reloc = { version = "2.0", path = "../rat-reloc" }
rat-focus = { version = "2.0", path = "../rat-focus" }
rat-ftable = { version = "2.0", path = "../rat-ftable" }
rat-text = { version = "3.0", path = "../rat-text" }
rat-menu = { version = "3.0", path = "../rat-menu" }
rat-scrolled = { version = "2.0", path = "../rat-scrolled" }
rat-popup = { version = "3.0", path = "../rat-popup" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.9"
format_num_pattern = "0.9"
pure-rust-locales = "0.8"
sys-locale = "0.3"
cli-clipboard = "0.4"

rat-theme4 = { version = "4", default-features = false, features = ["rat-widget"], path = "../rat-theme4" }
