[package]
name = "rat-widget"
version = "3.1.1"
edition = "2024"
authors = ["thscharler <thscharler@gmail.com>"]
description = "ratatui widgets extended edition"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa"
readme = "readme.md"
keywords = ["tui", "ratatui", "input", "widget"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "textarea.gif"]

[lints]
workspace = true

[features]
default = []
# set user-directories for file-dialog
user_directories = ["dep:dirs", "dep:sysinfo"]
# setup cli-clipboard.
cli-clipboard = ["rat-text/cli-clipboard"]

[dependencies]
log = "0.4"
unicode-segmentation = "1.11"
unicode-display-width = "0.3"
chrono = { version = "0.4", features = ["unstable-locales"] }
map_range_int = { version = "1.0" }
dirs = { version = "6.0.0", optional = true }
sysinfo = { version = "0.38", optional = true }

ratatui-core = { version = "0.1", features = ["std", "layout-cache"] }
ratatui-widgets = { version = "0.3", features = ["std", "unstable-rendered-line-info"] }
ratatui-crossterm = { version = "0.1" }

rat-event = { workspace = true }
rat-reloc = { workspace = true }
rat-focus = { workspace = true }
rat-ftable = { workspace = true }
rat-text = { workspace = true }
rat-menu = { workspace = true }
rat-scrolled = { workspace = true }
rat-popup = { workspace = true }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.9"
format_num_pattern = "0.9"
pure-rust-locales = "0.8"
sys-locale = "0.3"
cli-clipboard = "0.4"

rat-theme4 = { workspace = true, default-features = false, features = ["rat-widget"] }
